<?xml version="1.0"?>
<package format="2">
  <name>cs169_prog_assign_1</name>
  <version>0.0.0</version>
  <description>The cs169_prog_assign_1 package contains Dartmouth Robotic's
  programming assignment 1. For task 1 ~ 3, you can execute each launch file</description>

  <maintainer email="mingi.jeong.gr@dartmouth.edu">class</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
